puppet.wikimedia.org: move iot back to puppetmaster1001
Change-Id: I2a65ac29dd190538d401c1c543c6b9053f98e04a

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -868,7 +868,7 @@ sq.planet        1D IN CNAME dyna.wikimedia.org.
 sv.planet        1D IN CNAME dyna.wikimedia.org.
 uk.planet        1D IN CNAME dyna.wikimedia.org.
 zh.planet        1D IN CNAME dyna.wikimedia.org.
-puppet           5M IN CNAME puppetmaster2001.codfw.wmnet.
+puppet           5M IN CNAME puppetmaster1001.eqiad.wmnet.
 pivot            1D IN CNAME dyna.wikimedia.org.
 superset         1D IN CNAME dyna.wikimedia.org.
 racktables       1D IN CNAME dyna.wikimedia.org.
