openstack: introduce FQDN for cloudinstances2b-gw in codfw1dev
Introduce the FQDN cloudinstances2b-gw.openstack.codfw1dev.wikimediacloud.org,
which correspond to the IP address 208.80.153.190.

Bug: T234836
Change-Id: Ie50e39f91243bdcd29f1ba3600deb51d3e01367c
Signed-off-by: Arturo Borrero Gonzalez <aborrero@wikimedia.org>

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -23,6 +23,11 @@ $ORIGIN codfw1dev.wikimediacloud.org.
 ; Primary openstack endpoint API used by openstack clients and endpoint catalog
 openstack  5M  IN CNAME  cloudcontrol2001-dev.wikimedia.org.
 
+$ORIGIN openstack.codfw1dev.wikimediacloud.org.
+
+; neutron virtual router cloudinstances2b-gw
+cloudinstances2b-gw 5M  IN A      208.80.153.190
+
 ;
 ; EQIAD
 ; eqiad1 openstack region
