--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -230,6 +230,8 @@ icinga2001      1H  IN A    208.80.153.74
 icinga2001      1H  IN AAAA 2620:0:860:3:208:80:153:74
 idp1001         1H  IN A    208.80.154.26 ; VM on ganeti01.svc.codfw.wmnet
 idp1001         1H  IN AAAA 2620:0:861:1:208:80:154:26 ; VM on ganeti01.svc.eqiad.wmnet
+idp2001         1H  IN A    208.80.153.23 ; VM on ganeti01.svc.codfw.wmnet
+idp2001         1H  IN AAAA 2620:0:860:1:208:80:153:23 ; VM on ganeti01.svc.codfw.wmnet
 idp             1H  IN CNAME idp1001.wikimedia.org.
 install1002     1H  IN A    208.80.154.22 ; VM on ganeti01.svc.eqiad.wmnet
 install1002     1H  IN AAAA 2620:0:861:1:208:80:154:22 ; VM on ganeti01.svc.eqiad.wmnet
