--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -138,6 +138,8 @@ bast2002        1H  IN A    208.80.153.54
 bast2002        1H  IN AAAA 2620:0:860:2:208:80:153:54
 bast3002        1H  IN A    91.198.174.113
 bast3002        1H  IN AAAA 2620:0:862:1:91:198:174:113
+bast3004        1H  IN A    91.198.174.60
+bast3004        1H  IN AAAA 2620:0:862:1:91:198:174:60
 bast4002        1H  IN A    198.35.26.6
 bast4002        1H  IN AAAA 2620:0:863:1:198:35:26:6
 bast5001        1H  IN A    103.102.166.7
@@ -199,6 +201,10 @@ dns2001         1H  IN A    208.80.153.77
 dns2001         1H  IN AAAA 2620:0:860:3:208:80:153:77
 dns2002         1H  IN A    208.80.153.111
 dns2002         1H  IN AAAA 2620:0:860:4:208:80:153:111
+dns3001         1H  IN A    91.198.174.61
+dns3001         1H  IN AAAA 2620:0:862:1:91:198:174:61
+dns3002         1H  IN A    91.198.174.62
+dns3002         1H  IN AAAA 2620:0:862:1:91:198:174:62
 dns4001         1H  IN A    198.35.26.7
 dns4001         1H  IN AAAA 2620:0:863:1:198:35:26:7
 dns4002         1H  IN A    198.35.26.8
