--- a/templates/wmftest.org
+++ b/templates/wmftest.org
@@ -32,6 +32,10 @@
 ; see https://phabricator.wikimedia.org/T109666
 wpt                     1H      IN A    54.69.228.169
 
+; Graphite instance on AWS
+; https://phabricator.wikimedia.org/T231870
+wpt-graphite            1H      IN A    3.221.230.90
+
 ; Service aliases
 ; Wildcard to support name-based virtual hosts in local development environments
 *.local                 1H      IN A    127.0.0.1
