add ge.wikimedia.org for Georgia user group
Bug: T236389
Change-Id: I42b65a10b84130bb6fff0f02b7f4fdd28c4a1420

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -429,6 +429,7 @@ fdc.m               1D IN CNAME dyna.wikimedia.org.
 fixcopyright.m      1D IN CNAME dyna.wikimedia.org.
 foundation.m        1D IN CNAME dyna.wikimedia.org.
 fi.m                1D IN CNAME dyna.wikimedia.org.
+ge.m                1D IN CNAME dyna.wikimedia.org.
 hi.m                1D IN CNAME dyna.wikimedia.org.
 legalteam.m         1D IN CNAME dyna.wikimedia.org.
 mai.m               1D IN CNAME dyna.wikimedia.org.
@@ -718,6 +719,7 @@ fdc              1D IN CNAME dyna.wikimedia.org.
 fi               1D IN CNAME dyna.wikimedia.org.
 fixcopyright     1D IN CNAME dyna.wikimedia.org.
 foundation       1D IN CNAME dyna.wikimedia.org.
+ge               1D IN CNAME dyna.wikimedia.org.
 grants           1D IN CNAME dyna.wikimedia.org.
 hi               1D IN CNAME dyna.wikimedia.org.
 hu               1D IN CNAME dyna.wikimedia.org.
