--- a/templates/mediawiki.org
+++ b/templates/mediawiki.org
@@ -15,15 +15,15 @@
 
 ; Mail exchangers
 
-                1H  IN MX   10  mx1001.wikimedia.org.
-                1H  IN MX   50  mx2001.wikimedia.org.
+@               1H  IN MX   10  mx1001.wikimedia.org.
+@               1H  IN MX   50  mx2001.wikimedia.org.
 
 ; Canonical names
 
-                600 IN DYNA geoip!text-addrs
+@               600 IN DYNA geoip!text-addrs
 
 ; Google Webmaster Tools verification record for search management
-                600 IN TXT  "google-site-verification=SB70h2VwbTUOmrd3YTPxnT4gjjX5u_g8MAxkIaCW03c"
+@               600 IN TXT  "google-site-verification=SB70h2VwbTUOmrd3YTPxnT4gjjX5u_g8MAxkIaCW03c"
 
 ; SPF records
 @               600 IN TXT  "v=spf1 include:wikimedia.org ~all"
