--- a/templates/toolserver.org
+++ b/templates/toolserver.org
@@ -15,7 +15,7 @@
 
 ; Mail exchangers
 
-            1H  IN MX   10 toolserver.org.
+@           1H  IN MX   10 toolserver.org.
 
 ; SPF records
 @           600 IN TXT  "v=spf1 -all"
