--- a/templates/wikiquote.org
+++ b/templates/wikiquote.org
@@ -15,15 +15,15 @@
 
 ; Mail exchangers
 
-            1H  IN MX   10  mx1001.wikimedia.org.
-            1H  IN MX   50  mx2001.wikimedia.org.
+@           1H  IN MX   10  mx1001.wikimedia.org.
+@           1H  IN MX   50  mx2001.wikimedia.org.
 
 
 ; Canonical names
-            600 IN DYNA geoip!text-addrs
+@           600 IN DYNA geoip!text-addrs
 
 ; Google Webmaster Tools verification record for search management
-            600 IN TXT  "google-site-verification=vAsBaqzq8W7sf1o6RVxBmg2nFe_siZY3DUDrOoHPhSc"
+@           600 IN TXT  "google-site-verification=vAsBaqzq8W7sf1o6RVxBmg2nFe_siZY3DUDrOoHPhSc"
 
 ; SPF records
 @           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
