--- a/templates/wikiversity.org
+++ b/templates/wikiversity.org
@@ -15,15 +15,15 @@
 
 ; Mail exchangers
 
-            1H  IN MX   10  mx1001.wikimedia.org.
-            1H  IN MX   50  mx2001.wikimedia.org.
+@           1H  IN MX   10  mx1001.wikimedia.org.
+@           1H  IN MX   50  mx2001.wikimedia.org.
 
 
 ; Canonical names
-            600 IN DYNA geoip!text-addrs
+@           600 IN DYNA geoip!text-addrs
 
 ; Google Webmaster Tools verification record for search management
-            600 IN TXT  "google-site-verification=V1cbBf_zxEHDRFykCf8YR6TlOvLA1h-5lmD5a8pKfBw"
+@           600 IN TXT  "google-site-verification=V1cbBf_zxEHDRFykCf8YR6TlOvLA1h-5lmD5a8pKfBw"
 
 ; SPF records
 @           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
