--- a/templates/wmftest.org
+++ b/templates/wmftest.org
@@ -15,11 +15,11 @@
 
 ; Mail exchangers
 
-            1H  IN MX   10      ASPMX.L.GOOGLE.COM.
-            1H  IN MX   20      ALT1.ASPMX.L.GOOGLE.COM.
-            1H  IN MX   30      ALT2.ASPMX.L.GOOGLE.COM.
-            1H  IN MX   40      ASPMX2.GOOGLEMAIL.COM.
-            1H  IN MX   50      ASPMX3.GOOGLEMAIL.COM.
+@           1H  IN MX   10      ASPMX.L.GOOGLE.COM.
+@           1H  IN MX   20      ALT1.ASPMX.L.GOOGLE.COM.
+@           1H  IN MX   30      ALT2.ASPMX.L.GOOGLE.COM.
+@           1H  IN MX   40      ASPMX2.GOOGLEMAIL.COM.
+@           1H  IN MX   50      ASPMX3.GOOGLEMAIL.COM.
 
 ; SPF records
 @           600 IN TXT  "v=spf1 include:wikimedia.org ~all"
