wikimedia.org: add DNS entries for cloudceph mon and osd
The cloudcephmon and cloudcephosd hosts will be providing block based storage
services to the CloudVPS infrastructure.

Bug: T228102
Bug: T224188
Change-Id: Ia450869d86d52ea2776d15830db646b161045902

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -141,6 +141,18 @@ bohrium         1H  IN A    208.80.154.27
 californium     1H  IN A    208.80.154.147
 californium     1H  IN AAAA 2620:0:861:2:208:80:154:147
 civi1001        1H  IN A    208.80.155.11
+cloudcephmon01  1H  IN A    208.80.154.148
+cloudcephmon01  1H  IN AAAA 2620:0:861:2:208:80:154:148
+cloudcephmon02  1H  IN A    208.80.154.149
+cloudcephmon02  1H  IN AAAA 2620:0:861:2:208:80:154:149
+cloudcephmon03  1H  IN A    208.80.154.150
+cloudcephmon03  1H  IN AAAA 2620:0:861:2:208:80:154:150
+cloudcephosd01  1H  IN A    208.80.154.151
+cloudcephosd01  1H  IN AAAA 2620:0:861:2:208:80:154:151
+cloudcephosd02  1H  IN A    208.80.154.152
+cloudcephosd02  1H  IN AAAA 2620:0:861:2:208:80:154:152
+cloudcephosd03  1H  IN A    208.80.154.153
+cloudcephosd03  1H  IN AAAA 2620:0:861:2:208:80:154:153
 cloudcontrol1003    1H  IN A    208.80.154.23
 cloudcontrol1003    1H  IN AAAA 2620:0:861:1:208:80:154:23
 cloudcontrol1004    1H  IN A    208.80.154.132
