grafana-beta: rename to grafana-next
The inclusion of 'beta' caused confusion, as people would often
assume it has something to do with the Beta Cluster.

Calling it grafana-next to reflect that it just has to do with
testing the 'next' version of Grafana we'll use.

Bug: T220838
Change-Id: Ie5fce9e16d1609120a9cd905d3269daf91c63241

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -611,9 +611,9 @@ git             1D IN CNAME dyna.wikimedia.org.
 graphite        1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
 grafana         1D IN CNAME dyna.wikimedia.org.
-grafana-beta         1D IN CNAME dyna.wikimedia.org.
 grafana-labs         1D IN CNAME dyna.wikimedia.org.
 grafana-labs-admin   1D IN CNAME dyna.wikimedia.org.
+grafana-next         1D IN CNAME dyna.wikimedia.org.    ; to replace grafana-beta which has a confusing name
 performance     1D IN CNAME dyna.wikimedia.org.
 horizon         1D IN CNAME dyna.wikimedia.org.
 wikitech        1D IN CNAME dyna.wikimedia.org.
