cas-puppetboard.wikimedia.org: add record
This is a DYNA address so will also need adding into the cache
infrastructre

Change-Id: I2e0fe22c39fdc7e2ee2056ef03bea065c5963d0c

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -666,6 +666,7 @@ policy          5M  IN CAA 0 issuewild "letsencrypt.org"
 policy          5M  IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
 puppetboard      1D IN CNAME dyna.wikimedia.org.
+cas-puppetboard  1D IN CNAME dyna.wikimedia.org.
 
 releases         1D IN CNAME dyna.wikimedia.org.
 releases-jenkins 1D IN CNAME dyna.wikimedia.org.
