Switch ldap-corp.codfw.wikimedia.org to ldap-corp2001
ldap-corp2001 is syncing against the OIT LDAP server and ldapsearches
are fine. I also switched mx2001 to temporarily use ldap-corp2001 and
send a test mail for mmuhlenhoff@ (my account) and moritz@ (an alias)
to mx2001 using swaks, which were correctly accepted.

Initially switch over the CNAME for the codfw server to ldap-corp2001,
eqiad can follow a day later.

Bug: T224557
Change-Id: I7c67c9b32eb083488a6790420755c890ffba879c

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -595,7 +595,7 @@ docker-registry 1D IN CNAME dyna.wikimedia.org.
 docs            1D IN CNAME dyna.wikimedia.org.
 
 ldap-corp.eqiad 1H  IN CNAME    dubnium
-ldap-corp.codfw 1H  IN CNAME    pollux
+ldap-corp.codfw 1H  IN CNAME    ldap-corp2001
 ldap-labs.eqiad 1H  IN CNAME    seaborgium
 ldap-labs.codfw 1H  IN CNAME    serpens
 
