--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -1,6 +1,6 @@
 ; vim: set expandtab:smarttab
 ; {{ serial_comment }}
-@ 1D IN SOA ns0.wikimedia.org. hostmaster.wikimedia.org. {{ serial_num }} 12H 2H 2W 1H
+@ 1H IN SOA ns0.wikimedia.org. hostmaster.wikimedia.org. {{ serial_num }} 12H 2H 2W 1H
 
 ; Name servers
 @           1D  IN NS   ns0.wikimedia.org.
