--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -1,6 +1,6 @@
 ; vim: set expandtab:smarttab
 ; {{ serial_comment }}
-@ 1H IN SOA ns0.wikimedia.org. hostmaster.wikimedia.org. {{ serial_num }} 12H 2H 2W 600
+@ 600 IN SOA ns0.wikimedia.org. hostmaster.wikimedia.org. {{ serial_num }} 12H 2H 2W 600
 
 ; Name servers
 
