fix comment about location of VM gerrit1002
Change-Id: Ie343443d8cc806f586025089d06619f7cfe6a8ba

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -229,7 +229,7 @@ frmon-codfw.frdev 1H  IN A    208.80.152.235
 fundraising-eqiad 1H  IN A    208.80.155.14
 gerrit1001      1H  IN A    208.80.154.136
 gerrit1001      1H  IN AAAA 2620:0:861:2:208:80:154:136
-gerrit1002      1H  IN A    208.80.154.138 ; VM on ganeti01.svc.codfw.wmnet
+gerrit1002      1H  IN A    208.80.154.138 ; VM on ganeti01.svc.eqiad.wmnet
 gerrit1002      1H  IN AAAA 2620:0:861:2:208:80:154:138 ; VM on ganeti01.svc.eqiad.wmnet
 gerrit2001      1H  IN A    208.80.153.106
 gerrit2001      1H  IN AAAA 2620:0:860:4:208:80:153:106
