Switch ldap-corp.eqiad.wikimedia.org to ldap-corp1001
mx2001/mx1001 are working fine with ldap-corp2001, also switch to
ldap-corp2001 on Monday.

Bug: T224557
Change-Id: Ibd8f5b417c4ea5506a6fa349e99b34123a1e76d7

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -589,7 +589,7 @@ doc             1D IN CNAME dyna.wikimedia.org.
 docker-registry 1D IN CNAME dyna.wikimedia.org.
 docs            1D IN CNAME dyna.wikimedia.org.
 
-ldap-corp.eqiad 1H  IN CNAME    dubnium
+ldap-corp.eqiad 1H  IN CNAME    ldap-corp1001
 ldap-corp.codfw 1H  IN CNAME    ldap-corp2001
 ldap-labs.eqiad 1H  IN CNAME    seaborgium
 ldap-labs.codfw 1H  IN CNAME    serpens
