--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -95,8 +95,8 @@ _domainkey.lists        1H  IN TXT  "o=~; r=postmaster@wikimedia.org;"
 _adsp._domainkey.lists  1H  IN TXT  "dkim=unknown;"
 wikimedia._domainkey.lists  1H  IN TXT  "v=DKIM1; k=rsa; p=MIGfMA0GCSqGSIb3DQEBAQUAA4GNADCBiQKBgQC7iVvYIGUbjtvFcLTUuN9Lsc1w17f8QHc01BxIr6jHJUMAMyxHSchdU6Il/hX1Or3JyOfdBi35SGqotI3G86xxQE7PZD7u+EediP5uhRTn+opv+nX5hEuxlnty8mPXem0DHhfSL0+3Ciu5WD0mNATb4NwC9jQjy2FzaLHn9D44PwIDAQAB"
 
-recursor0       1H  IN A    208.80.154.254  ; eqiad LVS (dns-rec-lb)
-recursor1       1H  IN A    91.198.174.216  ; esams LVS (dns-rec-lb)
+recursor0       1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
+recursor1       1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
 
 ; Geodynamic records
 reflect      10 IN DYNA reflect ; GeoDNS debugging
@@ -335,8 +335,7 @@ ncredir-lb.eqiad    1H IN A 208.80.154.232
 ncredir-lb.eqiad    1H IN AAAA 2620:0:861:ed1a::9
 upload-lb.eqiad     1H IN A 208.80.154.240
 upload-lb.eqiad     1H IN AAAA 2620:0:861:ed1a::2:b
-dns-rec-lb.eqiad    1H IN A    208.80.154.254
-dns-rec-lb.eqiad    1H IN AAAA 2620:0:861:ed1a::3:fe
+dns-rec-lb.eqiad    1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
 
 ; These legacy entries should eventually move to RESTBase
 cxserver            1D IN CNAME dyna.wikimedia.org.
@@ -368,8 +367,7 @@ donate-lb.ulsfo     1H IN MX 10    mx1001
 donate-lb.ulsfo     1H IN MX 50    mx2001
 upload-lb.ulsfo     1H IN A 198.35.26.112
 upload-lb.ulsfo     1H IN AAAA 2620:0:863:ed1a::2:b
-dns-rec-lb.ulsfo    1H IN A    198.35.26.127
-dns-rec-lb.ulsfo    1H IN AAAA 2620:0:863:ed1a::3:fe
+dns-rec-lb.ulsfo    1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
 
 ;;; eqsin
 text-lb.eqsin       1H IN A 103.102.166.224
@@ -382,8 +380,7 @@ donate-lb.eqsin     1H IN MX 10    mx1001
 donate-lb.eqsin     1H IN MX 50    mx2001
 upload-lb.eqsin     1H IN A 103.102.166.240
 upload-lb.eqsin     1H IN AAAA 2001:df2:e500:ed1a::2:b
-dns-rec-lb.eqsin    1H IN A    103.102.166.254
-dns-rec-lb.eqsin    1H IN AAAA 2001:df2:e500:ed1a::3:fe
+dns-rec-lb.eqsin    1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
 
 ;;; codfw
 text-lb.codfw       1H IN A 208.80.153.224
@@ -396,8 +393,7 @@ ncredir-lb.codfw    1H IN A 208.80.153.232
 ncredir-lb.codfw    1H IN AAAA 2620:0:860:ed1a::9
 upload-lb.codfw     1H IN A 208.80.153.240
 upload-lb.codfw     1H IN AAAA 2620:0:860:ed1a::2:b
-dns-rec-lb.codfw    1H IN A    208.80.153.254
-dns-rec-lb.codfw    1H IN AAAA 2620:0:860:ed1a::3:fe
+dns-rec-lb.codfw    1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
 
 git-ssh.codfw       1H  IN A    208.80.153.250
 git-ssh.codfw       1H  IN AAAA 2620:0:860:ed1a::3:fa
@@ -415,8 +411,7 @@ donate-lb.esams     1H IN MX 10    mx1001
 donate-lb.esams     1H IN MX 50    mx2001
 upload-lb.esams     1H IN A 91.198.174.208
 upload-lb.esams     1H IN AAAA 2620:0:862:ed1a::2:b
-dns-rec-lb.esams    1H IN A    91.198.174.216
-dns-rec-lb.esams    1H IN AAAA 2620:0:862:ed1a::3:fe
+dns-rec-lb.esams    1H IN CNAME recdns.anycast.wmnet. ; Legacy hostname, was LVS recdns, to be removed with T239993
 
 ; Mobile
 
