--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -833,6 +833,7 @@ labs             1D IN CNAME dyna.wikimedia.org.
 ; deprecated but kept for compatibility, see RT #6769
 labsconsole      1D IN CNAME dyna.wikimedia.org.
 logstash         1D IN CNAME dyna.wikimedia.org.
+logstash-next    1D IN CNAME dyna.wikimedia.org.
 metrics          1D IN CNAME dyna.wikimedia.org.
 moon             1D IN CNAME dyna.wikimedia.org.
 noc              1D IN CNAME dyna.wikimedia.org.
