--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -613,6 +613,9 @@ wikitech        1D IN CNAME dyna.wikimedia.org.
 icinga          5M  IN CNAME    icinga1001
 cas-icinga      5M  IN CNAME    icinga1001
 
+intake-logging   1D IN CNAME dyna.wikimedia.org.
+intake-analytics 1D IN CNAME dyna.wikimedia.org.
+
 integration     1D IN CNAME dyna.wikimedia.org.
 irc             1H  IN CNAME    kraz
 
