--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -23,6 +23,9 @@ $ORIGIN openstack.codfw1dev.wikimediacloud.org.
 ; neutron virtual router cloudinstances2b-gw
 cloudinstances2b-gw 5M  IN A      208.80.153.190
 
+; general outgoing/egress NAT address (routing_source_ip)
+nat                 5M  IN A      185.15.57.1
+
 ;
 ; EQIAD
 ; eqiad1 openstack region
