--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -632,6 +632,7 @@ login           1D IN CNAME dyna.wikimedia.org.
 
 librenms        1H  IN CNAME    netmon1002
 netbox          1H  IN CNAME    netbox1001
+netbox-export   1H  IN CNAME    netbox1001
 
 payments        5M  IN CNAME    payments-eqiad
 payments.frdev  5M  IN CNAME    payments-codfw
