--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -300,6 +300,14 @@ seaborgium      1H  IN A    208.80.154.79 ; VM on ganeti01.svc.eqiad.wmnet
 serpens         1H  IN A    208.80.153.49 ; VM on ganeti01.svc.codfw.wmnet
 torrelay1001    1H  IN A    208.80.154.9
 torrelay1001    1H  IN AAAA 2620:0:861:1:208:80:154:9
+urldownloader1001 1H  IN A    208.80.154.29 ; VM on ganeti01.svc.eqiad.wmnet
+urldownloader1001 1H  IN AAAA 2620:0:861:1:208:80:154:29 ; VM on ganeti01.svc.eqiad.wmnet
+urldownloader1002 1H  IN A    208.80.154.81 ; VM on ganeti01.svc.eqiad.wmnet
+urldownloader1002 1H  IN AAAA 2620:0:861:3:208:80:154:81 ; VM on ganeti01.svc.eqiad.wmnet
+urldownloader2001 1H  IN A    208.80.153.24 ; VM on ganeti01.svc.codfw.wmnet
+urldownloader2001 1H  IN AAAA 2620:0:860:1:208:80:153:24 ; VM on ganeti01.svc.codfw.wmnet
+urldownloader2002 1H  IN A    208.80.153.61 ; VM on ganeti01.svc.codfw.wmnet
+urldownloader2002 1H  IN AAAA 2620:0:860:2:208:80:153:61 ; VM on ganeti01.svc.codfw.wmnet
 
 ; Service aliases
 
