--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -606,8 +606,7 @@ gerrit        600 IN A        208.80.154.137
 gerrit        600 IN AAAA     2620:0:861:2:208:80:154:137
 gerrit-replica    600 IN A        208.80.153.107
 gerrit-replica    600 IN AAAA     2620:0:860:4:208:80:153:107
-gerrit-test       600 IN A        208.80.154.139
-gerrit-test       600 IN AAAA     2620:0:861:2:208:80:154:139
+gerrit-test       600 IN A        208.80.154.78 ; VM on ganeti01.svc.eqiad.wmnet
 git             1D IN CNAME dyna.wikimedia.org.
 graphite        1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
