--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -411,6 +411,8 @@ donate-lb.esams     1H IN A 91.198.174.192
 donate-lb.esams     1H IN AAAA 2620:0:862:ed1a::1
 donate-lb.esams     1H IN MX 10    mx1001
 donate-lb.esams     1H IN MX 50    mx2001
+ncredir-lb.esams    1H IN A 91.198.174.194
+ncredir-lb.esams    1H IN AAAA 2620:0:862:ed1a::3
 upload-lb.esams     1H IN A 91.198.174.208
 upload-lb.esams     1H IN AAAA 2620:0:862:ed1a::2:b
 
