--- a/templates/wmftest.org
+++ b/templates/wmftest.org
@@ -31,6 +31,12 @@ wpt                     1H      IN A    54.69.228.169
 ; https://phabricator.wikimedia.org/T231870
 wpt-graphite            1H      IN A    3.221.230.90
 
+; WebPageReplay on AWS
+; https://wikitech.wikimedia.org/wiki/Performance/WebPageReplay
+wpr-mobile              1H      IN A    54.147.150.71
+wpr-desktop             1H      IN A    3.226.184.130
+wpr-enwiki              1H      IN A    3.80.151.28
+
 ; Service aliases
 ; Wildcard to support name-based virtual hosts in local development environments
 *.local                 1H      IN A    127.0.0.1
