Serve smokeping.wm.o directly from netmon1002
Bug: T238900
Change-Id: Id00004e980a571764ed0c9c5c3e7f168f52ec3f4

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -893,7 +893,7 @@ transparency-archive 1D IN CNAME dyna.wikimedia.org.
 transparency-private 1D IN CNAME dyna.wikimedia.org.
 search           1D IN CNAME dyna.wikimedia.org.
 shop             1D IN CNAME dyna.wikimedia.org.
-smokeping        1D IN CNAME dyna.wikimedia.org.
+smokeping        1H IN CNAME netmon1002
 store            1H  IN CNAME    c.ssl.shopify.com.
 static-bugzilla  1D IN CNAME dyna.wikimedia.org.
 stats            1D IN CNAME dyna.wikimedia.org.
