--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -370,6 +370,8 @@ donate-lb.ulsfo     1H IN A 198.35.26.96
 donate-lb.ulsfo     1H IN AAAA 2620:0:863:ed1a::1
 donate-lb.ulsfo     1H IN MX 10    mx1001
 donate-lb.ulsfo     1H IN MX 50    mx2001
+ncredir-lb.ulsfo    1H IN A 198.35.26.98
+ncredir-lb.ulsfo    1H IN AAAA 2620:0:863:ed1a::3
 upload-lb.ulsfo     1H IN A 198.35.26.112
 upload-lb.ulsfo     1H IN AAAA 2620:0:863:ed1a::2:b
 
