--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -705,7 +705,7 @@ wiki-mail-eqiad 1H  IN AAAA     2620:0:861:3:208:80:154:91
 wiki-mail-codfw 1H  IN A        208.80.153.46
 wiki-mail-codfw 1H  IN AAAA     2620:0:860:2:208:80:153:46
 
-url-downloader.eqiad  1H  IN A          208.80.154.49 ; actinium
+url-downloader.eqiad  1H  IN A          208.80.154.29 ; urldownloader1001
 url-downloader.codfw  1H  IN A          208.80.153.24 ; urldownloader2001
 url-downloader        1H  IN CNAME      url-downloader.eqiad
 
