--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -26,6 +26,10 @@ cloudinstances2b-gw 5M  IN A      208.80.153.190
 ; general outgoing/egress NAT address (routing_source_ip)
 nat                 5M  IN A      185.15.57.1
 
+; this is an additional IPv4 on cloudservices2002-dev.wikimedia.org, Designate
+ns0                 5M  IN A      208.80.153.78
+ns1                 5M  IN A      208.80.153.78
+
 ;
 ; EQIAD
 ; eqiad1 openstack region
