wikimediacloud.org: fix address of ns0.openstack.codfw1dev.wikimediacloud.org
Reuse the address of codfw1dev-ns0.wikimedia.org instead of the one from the
recursor. Same for ns1.

$ host codfw1dev-ns0.wikimedia.org
codfw1dev-ns0.wikimedia.org has address 208.80.153.76
codfw1dev-ns0.wikimedia.org has IPv6 address 2620:0:860:3:208:80:153:76

$ host cloudservices2002-dev.wikimedia.org
cloudservices2002-dev.wikimedia.org has address 208.80.153.76
cloudservices2002-dev.wikimedia.org has IPv6 address 2620:0:860:3:208:80:153:76

Bug: T243766
Change-Id: I226e663ac1adbba787f9f3c9c3aa4111dce0507e
Signed-off-by: Arturo Borrero Gonzalez <aborrero@wikimedia.org>

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -26,9 +26,11 @@ cloudinstances2b-gw 5M  IN A      208.80.153.190
 ; general outgoing/egress NAT address (routing_source_ip)
 nat                 5M  IN A      185.15.57.1
 
-; this is an additional IPv4 on cloudservices2002-dev.wikimedia.org, Designate
-ns0                 5M  IN A      208.80.153.78
-ns1                 5M  IN A      208.80.153.78
+; this is the same as cloudservices2002-dev.wikimedia.org, Designate.
+ns0                 5M  IN A      208.80.153.76
+ns0                 5M  IN AAAA   2620:0:860:3:208:80:153:76
+ns1                 5M  IN A      208.80.153.76
+ns1                 5M  IN AAAA   2620:0:860:3:208:80:153:76
 
 ;
 ; EQIAD
