--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -234,8 +234,12 @@ idp2001         1H  IN AAAA 2620:0:860:1:208:80:153:23 ; VM on ganeti01.svc.codf
 idp             1H  IN CNAME idp2001.wikimedia.org.
 install1002     1H  IN A    208.80.154.22 ; VM on ganeti01.svc.eqiad.wmnet
 install1002     1H  IN AAAA 2620:0:861:1:208:80:154:22 ; VM on ganeti01.svc.eqiad.wmnet
+install1003     1H  IN A    208.80.154.20 ; VM on ganeti01.svc.eqiad.wmnet
+install1003     1H  IN AAAA 2620:0:861:1:208:80:154:20 ; VM on ganeti01.svc.eqiad.wmnet
 install2002     1H  IN A    208.80.153.53 ; VM on ganeti01.svc.codfw.wmnet
 install2002     1H  IN AAAA 2620:0:860:2:208:80:153:53 ; VM on ganeti01.svc.codfw.wmnet
+install2003     1H  IN A    208.80.153.51 ; VM on ganeti01.svc.codfw.wmnet
+install2003     1H  IN AAAA 2620:0:860:2:208:80:153:51 ; VM on ganeti01.svc.codfw.wmnet
 kraz            1H  IN A    208.80.153.44 ; VM on ganeti01.svc.codfw.wmnet
 kraz            1H  IN AAAA 2620:0:860:2:208:80:153:44 ; VM on ganeti01.svc.codfw.wmnet
 ldap-replica2001 1H IN A    208.80.153.22 ; VM on ganeti01.svc.codfw.wmnet
