switch payments.wm.o back to eqiad after mss clamping reenabled on core routers
Bug: T244610
Change-Id: I8ee46572a0b0a03e0e9971fb8fc3d35c5ffcb3d7

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -638,7 +638,7 @@ librenms        1H  IN CNAME    netmon1002
 netbox          1H  IN CNAME    netbox1001
 netbox-exports  1H  IN CNAME    netbox1001
 
-payments        5M  IN CNAME    payments-codfw
+payments        5M  IN CNAME    payments-eqiad
 payments.frdev  5M  IN CNAME    payments-codfw
 payments-eqiad  1H  IN A        208.80.155.5
 payments-codfw  1H  IN A        208.80.152.228
