--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -607,6 +607,7 @@ gerrit-test       600 IN A        208.80.154.78
 gerrit-test       600 IN AAAA     2620:0:861:3:208:80:154:78
 git             1D IN CNAME dyna.wikimedia.org.
 graphite        1D IN CNAME dyna.wikimedia.org.
+cas-graphite    1D IN CNAME dyna.wikimedia.org.
 graphite-labs   1D IN CNAME dyna.wikimedia.org.
 grafana         1D IN CNAME dyna.wikimedia.org.
 grafana-labs         1D IN CNAME dyna.wikimedia.org.
