wikimediacloud.org: introduce new service names for DNS
New service names for DNS running inside openstack (designate).
Only add new names, don't drop old ones until we are ready to do so.

This patch only adds PTR records for the IPv6 addresses that don't have a
previous record. For those having a previous record, it will be updated when we
are ready to drop the old names.

Bug: T243766
Change-Id: Ie7f58fd1f13ea8b7d16a5a5c508ac66ce7a85bee
Signed-off-by: Arturo Borrero Gonzalez <aborrero@wikimedia.org>

--- a/templates/wikimediacloud.org
+++ b/templates/wikimediacloud.org
@@ -26,11 +26,14 @@ cloudinstances2b-gw 5M  IN A      208.80.153.190
 ; general outgoing/egress NAT address (routing_source_ip)
 nat                 5M  IN A      185.15.57.1
 
-; this is the same as cloudservices2002-dev.wikimedia.org, Designate.
 ns0                 5M  IN A      208.80.153.76
 ns0                 5M  IN AAAA   2620:0:860:3:208:80:153:76
 ns1                 5M  IN A      208.80.153.76
 ns1                 5M  IN AAAA   2620:0:860:3:208:80:153:76
+ns-recursor0        5M  IN A      208.80.153.78
+ns-recursor0        5M  IN AAAA   2620:0:860:3:208:80:153:78
+ns-recursor1        5M  IN A      208.80.153.78
+ns-recursor1        5M  IN AAAA   2620:0:860:3:208:80:153:78
 
 ;
 ; EQIAD
@@ -50,3 +53,12 @@ cloudinstances2b-gw 5M  IN A      208.80.155.92
 
 ; general outgoing/egress NAT address (routing_source_ip)
 nat                 5M  IN A      185.15.56.1
+
+ns0                 5M  IN A      208.80.154.135
+ns0                 5M  IN AAAA   2620:0:861:2:208:80:154:135
+ns1                 5M  IN A      208.80.154.11
+ns1                 5M  IN AAAA   2620:0:861:1:208:80:154:11
+ns-recursor0        5M  IN A      208.80.154.143
+ns-recursor0        5M  IN AAAA   2620:0:861:2:208:80:154:143
+ns-recursor1        5M  IN A      208.80.154.24
+ns-recursor1        5M  IN AAAA   2620:0:861:1:208:80:154:24
