--- a/templates/wikiworkshop.org
+++ b/templates/wikiworkshop.org
@@ -8,11 +8,9 @@
 @           1D  IN NS   ns1.wikimedia.org.
 @           1D  IN NS   ns2.wikimedia.org.
 
-; Hosts
-
 ; CAA records for wikiworkshop.org - LE
 @           5M  IN CAA 0 issue "letsencrypt.org"
 @           5M  IN CAA 0 iodef "mailto:dns-admin@wikimedia.org"
 
-@           1H  IN A 171.64.75.80
-www         1H  IN A 171.64.75.80
+@           600 IN DYNA geoip!text-addrs
+www         600 IN DYNA geoip!text-addrs
