switch apt.wikimedia.org from install1002 to apt1001
Bug: T224576
Bug: T242602
Change-Id: Ic8ace0a799e497d8ba29f7b19f6aca46a7a8d88b

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -563,7 +563,7 @@ pfw3-codfw      1H  IN A     208.80.153.197
 
 annual          1D IN CNAME dyna.wikimedia.org.
 
-apt             300  IN CNAME   install1002
+apt             300  IN CNAME   apt1001
 
 archiva         5M  IN CNAME    archiva1001
 
