--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -182,8 +182,8 @@ cloud-ns0         1H  IN A    208.80.154.135
 cloud-ns0         1H  IN AAAA 2620:0:861:2:208:80:154:135
 cloud-ns1         1H  IN A    208.80.154.11
 cloud-ns1         1H  IN AAAA 2620:0:861:1:208:80:154:11
-eno2-2120.cloudnet2002-dev 1H IN A 208.80.153.188
-eno2-2120.cloudnet2003-dev 1H IN A 208.80.153.189
+br-external.cloudnet2002-dev 1H IN A 208.80.153.188
+br-external.cloudnet2003-dev 1H IN A 208.80.153.189
 
 cloud-recursor0   1H  IN A    208.80.154.143
 cloud-recursor1   1H  IN A    208.80.154.24
