techblog.wikimedia.org: Reduce TTL
Reduce the TTL for our techblog.wikimedia.org CNAME record from 1 hour
to 5 minutes in preparation for future changes which will direct the
CNAME to a different master record.

Bug: T246507
Change-Id: Iea2244e53a036b502e9caefbdabe08f76052509a

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -903,7 +903,7 @@ static-bugzilla  1D IN CNAME dyna.wikimedia.org.
 stats            1D IN CNAME dyna.wikimedia.org.
 status           5M  IN A        192.237.162.200
 status           5M  IN AAAA     2001:4801:7821:77:be76:4eff:fe10:2ed5
-techblog         1D IN CNAME dyna.wikimedia.org.
+techblog         5M IN CNAME dyna.wikimedia.org.
 ticket           1D IN CNAME dyna.wikimedia.org.
 mirrors          1H  IN CNAME    sodium
 yarn             1D IN CNAME dyna.wikimedia.org.
