--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -150,6 +150,8 @@ cloudcontrol1003    1H  IN A    208.80.154.23
 cloudcontrol1003    1H  IN AAAA 2620:0:861:1:208:80:154:23
 cloudcontrol1004    1H  IN A    208.80.154.132
 cloudcontrol1004    1H  IN AAAA 2620:0:861:2:208:80:154:132
+cloudcontrol1005    1H  IN A    208.80.154.85
+cloudcontrol1005    1H  IN AAAA 2620:0:861:3:208:80:154:85
 cloudcontrol2001-dev 1H  IN A    208.80.153.59
 cloudcontrol2001-dev 1H  IN AAAA 2620:0:860:2:208:80:153:59
 cloudcontrol2003-dev  1H  IN A    208.80.153.75
