--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -585,6 +585,8 @@ cache           1D IN CNAME dyna.wikimedia.org.
 
 config-master   1D IN CNAME dyna.wikimedia.org.
 
+contint         5M IN CNAME contint1001.wikimedia.org.
+
 dash.frdev      1H  IN CNAME    frdev-eqiad
 
 design          1D IN CNAME dyna.wikimedia.org.
