--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -238,6 +238,7 @@ idp2001         1H  IN AAAA 2620:0:860:1:208:80:153:23 ; VM on ganeti01.svc.codf
 idp-test2001    1H  IN A    208.80.153.25 ; VM on ganeti01.svc.codfw.wmnet
 idp-test2001    1H  IN AAAA 2620:0:860:1:208:80:153:25 ; VM on ganeti01.svc.codfw.wmnet
 idp             1H  IN CNAME idp1001.wikimedia.org.
+idp-test        1H  IN CNAME idp-test2001.wikimedia.org.
 install1002     1H  IN A    208.80.154.22 ; VM on ganeti01.svc.eqiad.wmnet
 install1002     1H  IN AAAA 2620:0:861:1:208:80:154:22 ; VM on ganeti01.svc.eqiad.wmnet
 install1003     1H  IN A    208.80.154.32 ; VM on ganeti01.svc.eqiad.wmnet
