--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -156,6 +156,8 @@ cloudcontrol2001-dev 1H  IN A    208.80.153.59
 cloudcontrol2001-dev 1H  IN AAAA 2620:0:860:2:208:80:153:59
 cloudcontrol2003-dev  1H  IN A    208.80.153.75
 cloudcontrol2003-dev  1H  IN AAAA 2620:0:860:3:208:80:153:75
+cloudcontrol2004-dev  1H  IN A    208.80.153.116
+cloudcontrol2004-dev  1H  IN AAAA 2620:0:860:4:208:80:153:116
 cloudelastic1001    1H  IN A    208.80.154.8
 cloudelastic1001    1H  IN AAAA 2620:0:861:1:208:80:154:8
 cloudelastic1002    1H  IN A    208.80.154.133
