--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -241,8 +241,8 @@ idp1001         1H  IN A    208.80.154.26 ; VM on ganeti01.svc.codfw.wmnet
 idp1001         1H  IN AAAA 2620:0:861:1:208:80:154:26 ; VM on ganeti01.svc.eqiad.wmnet
 idp2001         1H  IN A    208.80.153.23 ; VM on ganeti01.svc.codfw.wmnet
 idp2001         1H  IN AAAA 2620:0:860:1:208:80:153:23 ; VM on ganeti01.svc.codfw.wmnet
-idp-test1001    1H  IN A    208.80.154.33 ; VM on ganeti01.svc.codfw.wmnet
-idp-test1001    1H  IN AAAA 2620:0:861:1:208:80:154:33 ; VM on ganeti01.svc.eqiad.wmnet
+idp-test1001    1H  IN A    208.80.154.87 ; VM on ganeti01.svc.eqiad.wmnet
+idp-test1001    1H  IN AAAA 2620:0:861:3:208:80:154:87 ; VM on ganeti01.svc.eqiad.wmnet
 idp-test2001    1H  IN A    208.80.153.25 ; VM on ganeti01.svc.codfw.wmnet
 idp-test2001    1H  IN AAAA 2620:0:860:1:208:80:153:25 ; VM on ganeti01.svc.codfw.wmnet
 idp             1H  IN CNAME idp1001.wikimedia.org.
