--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -265,8 +265,8 @@ labstore1007        1H  IN A    208.80.155.106
 labstore1007        1H  IN AAAA 2620:0:861:4:208:80:155:106
 labtestpuppetmaster2001 1H IN A 208.80.153.108
 labtestpuppetmaster2001 1H IN AAAA 2620:0:860:4:208:80:153:108
-labtestservices2003 1H  IN A    208.80.153.109
-labtestservices2003 1H  IN AAAA 2620:0:860:4:208:80:153:109
+cloudservices2003-dev 1H  IN A    208.80.153.109
+cloudservices2003-dev 1H  IN AAAA 2620:0:860:4:208:80:153:109
 labweb1001      1H  IN A    208.80.154.160
 labweb1001      1H  IN AAAA 2620:0:861:2:208:80:154:160
 labweb1002      1H  IN A    208.80.155.109
