--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -178,8 +178,12 @@ cloudservices2002-dev 1H  IN A    208.80.153.76
 cloudservices2002-dev 1H  IN AAAA 2620:0:860:3:208:80:153:76
 codfw1dev-ns0         1H  IN A    208.80.153.76
 codfw1dev-ns0         1H  IN AAAA 2620:0:860:3:208:80:153:76
+codfw1dev-ns1         1H  IN A    208.80.153.109
+codfw1dev-ns1         1H  IN AAAA 2620:0:860:3:208:80:153:109
 codfw1dev-recursor0 1H IN A       208.80.153.78
 codfw1dev-recursor0 1H IN AAAA  2620:0:860:3:208:80:153:78
+codfw1dev-recursor1 1H IN A       208.80.153.83
+codfw1dev-recursor1 1H IN AAAA  2620:0:860:3:208:80:153:83
 cloudstore1008      1H  IN A    208.80.155.125
 cloudstore1008      1H  IN AAAA 2620:0:861:4:208:80:155:125
 cloudstore1009      1H  IN A    208.80.155.126
