--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -842,6 +842,7 @@ za               1D IN CNAME dyna.wikimedia.org.
 ; Other websites (NO wikis!)
 2030             1D IN CNAME dyna.wikimedia.org.
 analytics        1D IN CNAME dyna.wikimedia.org.
+analytics.frdev  1D IN A     208.80.155.4
 blog             1H  IN CNAME    wikimediablog.wordpress.com.
 bugs             1D IN CNAME dyna.wikimedia.org.
 bugzilla         1D IN CNAME dyna.wikimedia.org.
