--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -134,6 +134,12 @@ bast5001        1H  IN AAAA 2001:df2:e500:1:103:102:166:7
 californium     1H  IN A    208.80.154.147
 californium     1H  IN AAAA 2620:0:861:2:208:80:154:147
 civi1001        1H  IN A    208.80.155.11
+cloudceph2001-dev    1H  IN A    208.80.153.39
+cloudceph2001-dev    1H  IN AAAA 2620:0:860:2:208:80:153:39
+cloudceph2002-dev    1H  IN A    208.80.153.40
+cloudceph2002-dev    1H  IN AAAA 2620:0:860:2:208:80:153:40
+cloudceph2003-dev    1H  IN A    208.80.153.41
+cloudceph2003-dev    1H  IN AAAA 2620:0:860:2:208:80:153:41
 cloudcephmon1001    1H  IN A    208.80.154.148
 cloudcephmon1001    1H  IN AAAA 2620:0:861:2:208:80:154:148
 cloudcephmon1002    1H  IN A    208.80.154.149
