Add anycast authdns IP address
Bug: T98006
Change-Id: I72f8f6d141a31315a777ef86615618d546cced82

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -10,6 +10,7 @@
 ns0         1D  IN A    208.80.154.238
 ns1         1D  IN A    208.80.153.231
 ns2         1D  IN A    91.198.174.239
+nsa         1H  IN A    198.35.27.27 ; anycast authdns
 
 ; Mail exchangers
 
