--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -287,6 +287,8 @@ lists1001       1H  IN A    208.80.154.31 ; VM on ganeti01.svc.eqiad.wmnet
 lists1001       1H  IN AAAA 2620:0:861:1:208:80:154:31 ; VM on ganeti01.svc.eqiad.wmnet
 sodium          1H  IN A    208.80.154.15
 sodium          1H  IN AAAA 2620:0:861:1:208:80:154:15
+malmok          1H  IN A    208.80.153.43 ; VM on ganeti01.svc.codfw.wmnet
+malmok          1H  IN AAAA 2620:0:860:2:208:80:153:43 ; VM on ganeti01.svc.codfw.wmnet
 mx1001          1H  IN A    208.80.154.76 ; VM on ganeti01.svc.eqiad.wmnet
 mx1001          1H  IN AAAA 2620:0:861:3:208:80:154:76 ; VM on ganeti01.svc.eqiad.wmnet
 mx2001          1H  IN A    208.80.153.45 ; VM on ganeti01.svc.codfw.wmnet
