--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -251,6 +251,12 @@ install1003     1H  IN A    208.80.154.32 ; VM on ganeti01.svc.eqiad.wmnet
 install1003     1H  IN AAAA 2620:0:861:1:208:80:154:32 ; VM on ganeti01.svc.eqiad.wmnet
 install2003     1H  IN A    208.80.153.51 ; VM on ganeti01.svc.codfw.wmnet
 install2003     1H  IN AAAA 2620:0:860:2:208:80:153:51 ; VM on ganeti01.svc.codfw.wmnet
+install3001     1H  IN A    91.198.174.63  ; VM on ganeti01.svc.esams.wmnet
+install3001     1H  IN AAAA 2620:0:862:1:91:198:174:63 ; VM on ganeti01.svc.esams.wmnet
+install4001     1H  IN A    198.35.26.12   ; VM on ganeti01.svc.ulsfo.wmnet
+install4001     1H  IN AAAA 2620:0:863:1:198:35:26:12  ; VM on ganeti01.svc.ulsfo.wmnet
+install5001     1H  IN A    103.102.166.13 ; VM on ganeti01.svc.eqsin.wmnet
+install5001     1H  IN AAAA 2001:df2:e500:1:103:102:166:13 ; VM on ganeti01.svc.eqsin.wmnet
 irc2001         1H  IN A    208.80.153.62 ; VM on ganeti01.svc.codfw.wmnet
 irc2001         1H  IN AAAA 2620:0:860:2:208:80:153:62 ; VM on ganeti01.svc.codfw.wmnet
 kraz            1H  IN A    208.80.153.44 ; VM on ganeti01.svc.codfw.wmnet
