Add archiva-new.wikimedia.org as CNAME to archiva1002
Bug: T252767
Change-Id: Iea15b585727ce15f2de739928abf472bb40560a1

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -577,6 +577,8 @@ apt             300  IN CNAME   apt1001
 
 archiva         5M  IN CNAME    archiva1001
 
+archiva-new     5M  IN CNAME    archiva1002
+
 benefactors     600 IN DYNA     geoip!text-addrs
 benefactors     1H  IN MX       10 mx1001
 benefactors     1H  IN MX       50 mx2001
