--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -560,6 +560,8 @@ cr1-eqsin       1H  IN A    103.102.166.129
 cr1-eqsin       1H  IN AAAA 2001:df2:e500:ffff::2
 cr2-eqsin       1H  IN A    103.102.166.130
 cr2-eqsin       1H  IN AAAA 2001:df2:e500:ffff::3
+cr3-eqsin       1H  IN A    103.102.166.131
+cr3-eqsin       1H  IN AAAA 2001:df2:e500:ffff::4
 mr1-eqsin       1H  IN A    103.102.166.128
 mr1-eqsin       1H  IN AAAA 2001:df2:e500:ffff::1
 mr1-eqsin.oob   1H  IN A    27.111.227.106
