icinga-extmon: add new cname for icinga external monitoring
Change-Id: Ia0c5f26551a42ed2880f21453e362aed7369bf67

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -646,6 +646,7 @@ wikitech        1D IN CNAME dyna.wikimedia.org.
 
 icinga          5M  IN CNAME    icinga1001
 cas-icinga      5M  IN CNAME    icinga1001
+icinga-extmon   5M  IN CNAME    icinga1001
 
 intake-logging   1D IN CNAME dyna.wikimedia.org.
 intake-analytics 1D IN CNAME dyna.wikimedia.org.
