icinga: add ldap-icinga.wikimedia.org CNAME
Add a CNAME so users can still authenticat to ldap using ldap in an
emergency

Bug: T256628
Change-Id: Ia97dd1894288009fddb6830929941fc686bc55b8

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -651,6 +651,7 @@ horizon         1D IN CNAME dyna.wikimedia.org.
 wikitech        1D IN CNAME dyna.wikimedia.org.
 
 icinga          5M  IN CNAME    icinga1001
+ldap-icinga     5M  IN CNAME    icinga1001
 cas-icinga      5M  IN CNAME    icinga1001
 icinga-extmon   5M  IN CNAME    icinga1001
 
