--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -614,6 +614,8 @@ doc             1D IN CNAME dyna.wikimedia.org.
 docker-registry 1D IN CNAME dyna.wikimedia.org.
 docs            1D IN CNAME dyna.wikimedia.org.
 
+helm-charts     1D IN CNAME dyna.wikimedia.org.
+
 ldap-corp.eqiad 1H  IN CNAME    ldap-corp1001
 ldap-corp.codfw 1H  IN CNAME    ldap-corp2001
 ldap-labs.eqiad 1H  IN CNAME    seaborgium
