--- a/templates/wikipedia.org
+++ b/templates/wikipedia.org
@@ -43,6 +43,7 @@ arbcom-fi               1D IN CNAME dyna.wikimedia.org.
 arbcom-fi.m             1D IN CNAME dyna.wikimedia.org.
 arbcom-nl               1D IN CNAME dyna.wikimedia.org.
 arbcom-nl.m             1D IN CNAME dyna.wikimedia.org.
+sysop-it.m              1D IN CNAME dyna.wikimedia.org.
 commons                 1D IN CNAME dyna.wikimedia.org.
 meta                    1D IN CNAME dyna.wikimedia.org.
 nostalgia               1D IN CNAME dyna.wikimedia.org.
@@ -52,6 +53,7 @@ quality.m               1D IN CNAME dyna.wikimedia.org.
 sep11                   1D IN CNAME dyna.wikimedia.org.
 sources                 1D IN CNAME dyna.wikimedia.org.
 species                 1D IN CNAME dyna.wikimedia.org.
+sysop-it                1D IN CNAME dyna.wikimedia.org.
 ten                     1D IN CNAME dyna.wikimedia.org.
 ten.m                   1D IN CNAME dyna.wikimedia.org.
 test                    1D IN CNAME dyna.wikimedia.org.
