--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -118,8 +118,6 @@ apt1001         1H  IN A    208.80.154.30 ; VM on ganeti01.svc.eqiad.wmnet
 apt1001         1H  IN AAAA 2620:0:861:1:208:80:154:30 ; VM on ganeti01.svc.eqiad.wmnet
 apt2001         1H  IN A    208.80.153.42 ; VM on ganeti01.svc.codfw.wmnet
 apt2001         1H  IN AAAA 2620:0:860:2:208:80:153:42 ; VM on ganeti01.svc.codfw.wmnet
-archiva1001     1H  IN A    208.80.154.16 ; VM on ganeti01.svc.eqiad.wmnet
-archiva1001     1H  IN AAAA 2620:0:861:1:208:80:154:16 ; VM on ganeti01.svc.eqiad.wmnet
 archiva1002     1H  IN A    208.80.154.33 ; VM on ganeti01.svc.eqiad.wmnet
 archiva1002     1H  IN AAAA 2620:0:861:1:208:80:154:33 ; VM on ganeti01.svc.eqiad.wmnet
 authdns1001     1H  IN A    208.80.154.134
@@ -583,9 +581,7 @@ annual          1D IN CNAME dyna.wikimedia.org.
 
 apt             300  IN CNAME   apt1001
 
-archiva-old     5M  IN CNAME    archiva1001
-
-archiva         5M  IN CNAME    archiva1002
+archiva         1H  IN CNAME    archiva1002
 
 benefactors     600 IN DYNA     geoip!text-addrs
 benefactors     1H  IN MX       10 mx1001
