Add security.wikimedia.org pointing to dyna
Bug: T257831
Change-Id: I037eed7970c4d203040340aa1f4afc1a0d9a0dbf

--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -706,6 +706,8 @@ rt              1H  IN MX       50 mx2001
 
 secure          1D IN CNAME dyna.wikimedia.org.
 
+security        1D IN CNAME dyna.wikimedia.org.
+
 sitemaps        1D IN CNAME dyna.wikimedia.org.
 
 stream          1D IN CNAME dyna.wikimedia.org.
