wikimediafoundation.org domain verification for Facebook
Bug: T258284
Change-Id: I795b52c1cc3a58b6cf2db33deb123a82a0301f6e

--- a/templates/wikimediafoundation.org
+++ b/templates/wikimediafoundation.org
@@ -19,6 +19,9 @@
 ; Canonical names
 @           600  IN A    192.0.66.2
 
+; Facebook verification record (T258284)
+@           600 IN TXT  "facebook-domain-verification=orjhfudqyeumf4uber3bpwan5pisu0"
+
 ; DKIM domain policy record
 _domainkey  1H  IN TXT  "o=~; r=hostmaster@wikimediafoundation.org;"
 
