--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -112,6 +112,8 @@ _dmarc.donate   1H  IN TXT "v=DMARC1; p=none; sp=none; rua=mailto:dmarc@donate.w
 
 ; Servers (alphabetic order) << WHAT PART ABOUT THIS IS SO HARD TO UNDERSTAND?
 
+alert1001       1H  IN A    208.80.154.88
+alert1001       1H  IN AAAA 2620:0:861:3:208:80:154:88
 alert2001       1H  IN A    208.80.153.84
 alert2001       1H  IN AAAA 2620:0:860:3:208:80:153:84
 apt1001         1H  IN A    208.80.154.30 ; VM on ganeti01.svc.eqiad.wmnet
