--- a/templates/wikimedia.org
+++ b/templates/wikimedia.org
@@ -591,10 +591,10 @@ dash.frdev      1H  IN CNAME    frdev-eqiad
 
 design          1D IN CNAME dyna.wikimedia.org.
 
-dbmonitor1001   600 IN A        208.80.154.82 ; VM on ganeti01.svc.eqiad.wmnet
-dbmonitor1001   600 IN AAAA     2620:0:861:3:208:80:154:82 ; VM on ganeti01.svc.eqiad.wmnet
-dbmonitor2001   600 IN A        208.80.153.52 ; VM on ganeti01.svc.codfw.wmnet
-dbmonitor2001   600 IN AAAA     2620:0:860:2:208:80:153:52 ; VM on ganeti01.svc.codfw.wmnet
+dbmonitor1001   1H IN A        208.80.154.82 ; VM on ganeti01.svc.eqiad.wmnet
+dbmonitor1001   1H IN AAAA     2620:0:861:3:208:80:154:82 ; VM on ganeti01.svc.eqiad.wmnet
+dbmonitor2001   1H IN A        208.80.153.52 ; VM on ganeti01.svc.codfw.wmnet
+dbmonitor2001   1H IN AAAA     2620:0:860:2:208:80:153:52 ; VM on ganeti01.svc.codfw.wmnet
 dbtree          1D IN CNAME dyna.wikimedia.org.
 
 debmonitor      1D IN CNAME dyna.wikimedia.org.
